user-admin create

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "reset";
+@import "config/colors";
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/index_view";
 @import "modules/chat_main";
 @import "modules/chat_side";
+@import "modules/user";
+@import "modules/flash";
