--- a/app/views/messages/_chat_side.html.haml
+++ b/app/views/messages/_chat_side.html.haml
@@ -2,13 +2,13 @@
   .side-header
     .side-header__box
       %p.side-header__box__name
-        mario
+        = current_user.name
       %ul.side-header__box__icons
         %li.side-header__box__icons__edit
           =link_to "#"do
             =icon('fa','edit')
         %li.side-header__box__icons__conf
-          =link_to "#"do
+          =link_to edit_user_path(current_user)do
             =icon('fa','cog')
   .side-groups
     =link_to"#"do
