--- a/app/views/messages/_chat_side.html.haml
+++ b/app/views/messages/_chat_side.html.haml
@@ -5,17 +5,18 @@
         = current_user.name
       %ul.side-header__box__icons
         %li.side-header__box__icons__edit
-          =link_to "#"do
+          =link_to new_group_path(@group) do
             =icon('fa','edit')
         %li.side-header__box__icons__conf
           =link_to edit_user_path(current_user)do
             =icon('fa','cog')
   .side-groups
-    =link_to"#"do
+    - current_user.groups.each do |group|
       .group
-        %p.group__name
-          marioman
-        %p.group__lastlog
-          test
+        =link_to"#"do
+          %p.group__name
+            = group.name
+          %p.group__lastlog
+            メッセージはまだありません。
     
       
