--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -60,48 +60,39 @@
       }
     }
   }
-  .main-form{
+  .form {
+    background-color: #dddddd;
+    box-sizing: border-box;
     height: 90px;
-    background-color: #d2d2d2;
-    padding: 20px 40px;
-    .form-box{
-      &__form{
-        display:flex;
-        &__text{
-          position: relative;
-          width: 100%;
-          display: flex;
-          &__message{
-          font-size: 16px;
-          color: $blwh;
-          border-style: none;
-          width: 100%;
-          height: 50px;
-          padding-left: 10px;
-          }
-          &__image{
-            padding-right: 10px;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 1.3em;
-            cursor: pointer;
-            &__label{
-              display:none;
-            }
-          }
-        }
-        &__submit{
-          height: 50px;
-          width: 100px;
-          padding: 0 30px;
-          margin-left: 15px;
-          background-color: $skyblue;
-          font-size: 16px;
-          cursor: pointer;
-          color: $white;
-        }
+    padding: 20px 50px 20px 40px;
+    &__message {
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+    }
+    &__mask {
+      background-color: $white;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
+      &__image {
+        font-size: 20px;
+        line-height: 50px;
       }
+      .hidden {
+        display: none;
+      }
+    }
+    &__submit {
+      background-color: $light_blue;
+      border: none;
+      color: $white;
+      float: right;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
     }
   }
 }
