--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -69,6 +69,7 @@
     &__message {
       border: none;
       float: left;
+      padding-left: 10px;
       height: 50px;
       width: calc(100% - 150px);
     }
