--- a/app/assets/stylesheets/modules/_chat_main.scss
+++ b/app/assets/stylesheets/modules/_chat_main.scss
@@ -66,35 +66,39 @@
     box-sizing: border-box;
     height: 90px;
     padding: 20px 50px 20px 40px;
+  }
+
+    .new_message{
+      display: flex;
+    }
+    .input{
+      width: 100%;
+      display: flex;
+      position: relative;
     &__message {
       border: none;
-      float: left;
       padding-left: 10px;
       height: 50px;
-      width: calc(100% - 150px);
+      width: 100%;
     }
-    &__mask {
-      background-color: $white;
-      float: left;
-      height: 50px;
-      padding-right: 10px;
       &__image {
         font-size: 20px;
         line-height: 50px;
+        position: absolute;
+        right: 15px;
+        top: 3px;
       }
       .hidden {
         display: none;
       }
     }
-    &__submit {
+    .form__submit {
       background-color: $light_blue;
       border: none;
       color: $white;
-      float: right;
       font-size: 16px;
       height: 50px;
       margin-left: 15px;
       padding: 0 30px;
-    }
   }
 }
